--- a/index.html
+++ b/index.html
@@ -1,54 +1,72 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html>
 <html>
 
 <head>
-  <title>Bootstrap 实例</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
-  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
+  <head>
+    <meta charset="utf-8">
+    <meta charset="utf-8">
+    <title>我爱小艾(runoob.com)</title>
+    <title>我爱小艾(runoob.com)</title>
+  </head>
 </head>
 
-<body style="height:1500px">
+<body>
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">Logo</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-    </ul>
-  </nav>
-
-  <div class="container-fluid" style="margin-top:80px">
-    <h3>固定导航栏</h3>
-    <p>导航栏可以固定在头部或者底部。</p>
-    <h1>滚动页面查看效果。</h1>
-  </div>
-  <form>
-    <div class="form-group">
-      <label for="email">Email address:</label>
-      <input type="email" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd">
-    </div>
-    <div class="form-check">
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox"> Remember me
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-  <div class="alert alert-success">
-    <strong>成功!</strong> 指定操作成功提示信息。
-  </div>
+  <body>
+    <h1>我的第一个标题</h1>
+    <h1>我的第一个标题</h1>
+    <p>我的第一个段落。</p>
+    <p>我的第一个段落。</p>
+  </body>
 </body>
+<a href="https://www.baidu.com">百度</a><br>
+<a href="https://www.baidu.com">百度</a><br>
+<a href="https://www.baidu.com/" target="_blank">百度</a><br>
+<a href="https://www.baidu.com/" target="_blank">百度</a><br>
+<a href="https://www.baidu.com/"><br>
+  <a href="https://www.baidu.com/"><br>
+    <img border="0" src="../../下载/a/a.png" alt="百度"></a>
+  <img border="0" src="../../下载/a/a.png" alt="百度"></a>
+
+
+<img src="../../下载/a/a.png" width="100" height="100" />
+<img src="../../下载/a/a.png" width="100" height="100" />
+<!-- <h2>-------------------------</h2> -->
+<h2>-------------------------</h2>
+<!-- <h2>-------------------------</h2> -->
+<h2>-------------------------</h2>
+<h2>-------------------------</h2>
+<h2>-------------------------</h2>
+<br>
+<br>
+<h2>-------------------------</h2>
+<h2>-------------------------</h2>
+<p>我是小艾的心头肉</p>
+<p>我是小艾的心头肉</p>
+<hr>
+<hr>
+<p>我是小可爱</p>
+<p>我是小可爱</p>
+<p>宝宝</p>
+<p>宝宝</p>
+<p>baobao</p>
+<p>baobao</p>
+<p>这个<br>段落<br>演示我是小可爱</p>
+<p>这个<br>段落<br>演示我是小可爱</p>
+我是宝宝<br>
+我是宝宝<br>
+<b>我是宝宝</b><br>
+<b>我是宝宝</b><br>
+<i>woshibaoao</i><br>
+<i>woshibaoao</i><br>
+12<sup>2</sup>=144<br>
+12<sup>2</sup>=144<br>
+<a id="tips">有用的提示部分</a><br>
+<a id="tips">有用的提示部分</a><br>
+<a href="#tips">访问有用的提示部分</a>
+<a href="#tips">访问有用的提示部分</a>
 
 </html>
